feat(management):create api interface dev & get info by api name
