# openapi.yaml
@@ -3,21 +3,50 @@
 
 openapi: 3.0.3
 info:
-    title: Management API
+    title: Api API
     version: 0.0.1
 paths:
-    v1/api/management/info:
-        get:
+    v1/api/management/interface:
+        put:
             tags:
-                - Management
-            operationId: Management_BaseInfo
+                - Api
+            operationId: Api_UpdateApi
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/UpdateApiRequest'
+                required: true
             responses:
                 "200":
                     description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/BaseInfoReply'
+                                $ref: '#/components/schemas/UpdateApiReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+        post:
+            tags:
+                - Api
+            operationId: Api_CreateApi
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/CreateApiRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/CreateApiReply'
                 default:
                     description: Default error response
                     content:
@@ -26,21 +55,43 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
-        BaseInfoReply:
+        ApiInfo:
             type: object
             properties:
-                apiCount:
+                name:
+                    type: string
+                url:
+                    type: string
+                type:
+                    type: integer
+                    format: enum
+                status:
+                    type: integer
+                    format: int32
+                body:
+                    type: string
+                queryParams:
+                    type: string
+                response:
+                    type: string
+                module:
+                    type: string
+                description:
+                    type: string
+        CreateApiReply:
+            type: object
+            properties:
+                id:
                     type: integer
                     format: int64
-                sceneCaseCount:
+                createdAt:
                     type: integer
                     format: int64
-                apiCaseCount:
-                    type: integer
-                    format: int64
-                cronJobCount:
-                    type: integer
-                    format: int64
+        CreateApiRequest:
+            type: object
+            properties:
+                apiInfo:
+                    $ref: '#/components/schemas/ApiInfo'
         GoogleProtobufAny:
             type: object
             properties:
@@ -65,5 +116,16 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        UpdateApiReply:
+            type: object
+            properties: {}
+        UpdateApiRequest:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int64
+                apiInfo:
+                    $ref: '#/components/schemas/ApiInfo'
 tags:
-    - name: Management
+    - name: Api
